--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   PAGE / BODY
 */
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
   color: var(--body-default-colour);
   background-color: var(--body-background-colour);
 }
