--- a/todo.css
+++ b/todo.css
@@ -1,12 +1,6 @@
 
+/*  PAGE / BODY  */
 
-
-
-
-
-/*
-  PAGE / BODY
-*/
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
     color: var(--body-default-colour);
