--- a/todo.css
+++ b/todo.css
@@ -5,22 +5,56 @@
  * CSS File for the solution
  * Assignment 03
  */
-
  body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
-    color: var(--body-default-colour);
-    background-color: var(--body-background-colour);
+    color: var(--default-colour);
+    background-color: var(--background-colour);
   }
-  
-  main {
-    min-height: 100vh;
+  .title {
+    min-height: 80px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .thelist {
+    min-height: 10vh;
   
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  
 
+ 
+
+#todoInput {
+    width: 70%;
+    padding: 8px;
+}
+
+#addBtn, #deleteBtn {
+    padding: 8px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+#todoList {
+    list-style-type: none;
+    padding: 0;
+}
+
+.todoItem {
+    display: flex;
+    justify-content: center:
+    align-items: center;
+    border: 1px solid #A68A64;
+    padding: 8px;
+    margin: 5px 0;
+}
+
+.delete {
+    color: var(--colour-darkbrown);
+    cursor: pointer;
+}
 
 
 /*
