--- a/todo.css
+++ b/todo.css
@@ -28,10 +28,10 @@
     align-items: center;
     background-color: var(--colour-lightestgreen);
     border: var(--colour-darkestgreen) 1px solid;
-    margin: 1rem 1 9rem 9;
+    margin: auto;
     border-radius: 1rem;
-    overflow auto;
-    max-width:100%;
+    overflow: auto;
+    max-width: 80%;
 }
 
 /* the "enter a new task" type box  */
@@ -39,13 +39,14 @@
     width: 70%;
     padding: 0.4rem;
     margin: 0.4rem;
+    align-self: center;
     background-color: var(--colour-backround);
 }
 
 /* the add button */
   #addBtn {
     padding: 0.4rem;
-    margin: 0.4rem;
+    margin: auto;
     cursor: pointer;
     background-color: var(--colour-lightgreen);
 }
@@ -72,7 +73,7 @@
     padding: 1rem;
     background-color: var(--colour-beige);
     border-radius: 0.5rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     text-align: center;
 }
